--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@jsonforms/react": "^3.5.1",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@mui/x-data-grid": "^7.27.1",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "next": "^15.1.7",
     "react": "latest",
