--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "next": "^15.1.7",
+    "qrcode.react": "^4.2.0",
     "react": "latest",
     "react-dom": "latest"
   },
