--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://qqqz3zbt-5050.uks1.devtunnels.ms
+NEXT_PUBLIC_API_URL=http://localhost:5050
+NEXT_PUBLIC_QR=http://localhost:3000
