feat: update env

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URL="mongodb://127.0.0.1:27017"
 MONGO_DB_NAME="mydb"
 PORT=5050
-FORWARDED_URL="https://qqqz3zbt-5050.uks1.devtunnels.ms"
+FORWARDED_URL="http://localhost:3000"
